# item-tracker

./: CMakeLists.txt  DataQueue.hpp  TrackEntity.hpp  display.cpp  display.hpp  main.cpp  segment.cpp  segment.hpp  track.cpp  track.hpp  virtual_camera.cpp  virtual_camera.hpp
